first file upload. Need to fix cropping

--- a/intrepid/intrepid_app/static/intrepid.css
+++ b/intrepid/intrepid_app/static/intrepid.css
@@ -56,6 +56,11 @@
 		border : 3px solid white;
 		}
 
+	.form-control {
+		width : 80% ;
+		margin-left: auto ;
+		margin-right: auto ;
+	}
 	.title-text {
 		font-family : 'Josefin Slab', serif ;
 		color : #2A2C31 ;
